Realized i needed to change more
